<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.geetajain.androidlabs.LoginActivity">



   <TextView

android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/TextView"


  />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
               android:hint="@string/login_name"
        android:inputType="textEmailAddress"

        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView1"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_password"
        android:inputType="textPassword"

</LinearLayout>
