<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:column_Weight="1"
    android:gravity="fill"
    android:orientation="horizontal"
    tools:context="com.example.geetajain.androidlabs.ListItemsActivity">


    <RadioButton android:id="@+id/radio_ninjas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RadioButton"
        android:onClick="onRadioButtonClicked"
        />



    <CheckBox android:id="@+id/checkbox_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkbox"
        android:onClick="onCheckboxClicked"/>

    <Switch
        android:id="@+id/switch_btn"
        android:layout_height="51dp"
        android:layout_width="116dp"
        android:layout_below="@string/Switch"
        android:text="what does this do?"

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="123dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@android:drawable/ic_menu_camera" />





</GridLayout>